--- a/report/report.bib
+++ b/report/report.bib
@@ -451,3 +451,12 @@
   title={A Fast Implementation of FR-Dijkstra},
   author={Lester, Ryan}
 }
+
+@inproceedings{bender2000lca,
+  title={The LCA problem revisited},
+  author={Bender, Michael A and Farach-Colton, Martin},
+  booktitle={Latin American Symposium on Theoretical Informatics},
+  pages={88--94},
+  year={2000},
+  organization={Springer}
+}
